--- a/carta.html
+++ b/carta.html
@@ -269,16 +269,13 @@
             <i class="fas fa-heart"></i>
         </div>
         <div class="side two">
-            <h2>🌷🌷🌷</h2>
             <p>Para el amor de mi vida, Alejandro</p>
             <p>
-                 🫶
+                ¡Feliz San Valentín!, el primero de muchísimos mi amor, que
+		sepas que te amo más que a nada en este mundo mi amor.
             </p>
             <p>
-                ¡Feliz San Valentín!, el primero de muchísimos
-            </p>
-            <p>
-                Con todo el amor del mundo cariño,<br>
+                Con todo el amor del mundo,
                 Tu gordo
             </p>
         </div>
