--- a/carta.html
+++ b/carta.html
@@ -269,13 +269,14 @@
             <i class="fas fa-heart"></i>
         </div>
         <div class="side two">
+	    <h2>🌷🌷🌷</h2>
             <p>Para el amor de mi vida, Alejandro</p>
             <p>
                 ¡Feliz San Valentín!, el primero de muchísimos mi amor, que
 		sepas que te amo más que a nada en este mundo mi amor.
             </p>
             <p>
-                Con todo el amor del mundo,
+                Con todo el amor del mundo,<br>
                 Tu gordo
             </p>
         </div>
